--- a/snippets/back-in-stock-form.liquid
+++ b/snippets/back-in-stock-form.liquid
@@ -21,10 +21,10 @@
         box-sizing: border-box;
     }
     .backinstock__headings h3 {
-        float: left;
+        float: center;
         width: 100%;
         text-align: center;
-        font-size: 20px;
+        font-size: 16px;
         color: #555555;
     }
     .heading__text {
@@ -57,6 +57,134 @@
         margin: 5px 0px;
         text-align: center;
     }
+    .outofstock.popup.white-popup {
+        max-width: 600px !important;
+    }
+    .white-popup {
+        position: relative;
+        background: #FFF;
+        width: auto;
+        max-width: 800px;
+        margin: 20px auto;
+    }
+
+    .white-popup img {
+        max-width: 100%;
+    }
+    .popup__title h3 {
+        margin: 0 auto;
+        text-align: center;
+    }
+    .popup__title p {
+        margin: 0 auto;
+        text-align: center;
+        padding: 25px 0;
+    }
+
+    .container {
+        max-width: 600px;
+        margin: 0 auto;
+        padding-bottom: 30px;
+    }
+    .slider-outofstock__item {
+        text-align: center;
+        position: relative;
+    }
+
+    .new {
+        position: absolute;
+        top: 0;
+        right: 0;
+        font-size: 10px;
+        padding: 3px;
+        text-transform: uppercase;
+        background-color: #CBDFDB;
+    }
+
+    .slick-list {
+        overflow: hidden;
+    }
+
+    .slick-track {
+        display: flex;
+    }
+
+    .slider-outofstock .slick-arrow {
+        position: absolute;
+        bottom: 40%;
+        font-size: 0;
+        width: 11px;
+        height: 21px;
+        cursor: pointer;
+    }
+
+    .slider-outofstock .slick-arrow.slick-prev {
+        left: 20px;
+        background: url({{ 'slider-arrow-left.png' | asset_url }}) 0 0 no-repeat;
+    }
+
+    .slider-outofstock .slick-arrow.slick-next {
+        background: url({{ 'slider-arrow-right.png' | asset_url }}) 0 0 no-repeat;
+        right: 20px;
+    }
+
+    .slider-outofstock__item-price {
+        margin-top: 10px;
+        font-size: 10px;
+        margin-top: 10px;
+        font-size: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .title-product {
+        color: #292929;
+        font-size: 14px;
+        font-weight: 600;
+    }
+
+    .from {
+        color: #292929;
+        font-weight: bold;
+    }
+
+    .price {
+        display: flex;
+        color: #D03224;
+        font-weight: bold;
+        font-size: 16px;
+    }
+
+    @media (max-width: 767px) {
+        .slider__item-price {
+            text-align: center;
+        }
+
+        .price {
+            justify-content: center;
+        }
+        .container {
+            padding-bottom: 50px;
+        }
+
+        .slider-outofstock .slick-arrow {
+            bottom: 3%;
+        }
+
+        .slider-outofstock .slick-arrow.slick-prev {
+            left: 40%;
+        }
+
+        .slider-outofstock .slick-arrow.slick-next {
+            right: 40%;
+        }
+
+        .new {
+            font-size: 8px;
+            padding: 1px;
+        }
+    }
 </style>
 
 <script>
@@ -77,7 +205,69 @@ $('#alertbtn').on('click',function(e){
             redirect: 'follow'
         };
         fetch("https://tech.unidragon.com/users", requestOptions)
-        .then(result => {$('#backinstock > form').hide(); $('.backinstock__headings > h3').text('Thank you!')})
+        .then(result => {
+            $('#backinstock > form').hide(); $('.backinstock__headings > h3').text('Thank you!');
+            $.magnificPopup.open({
+                items: {
+                    src: '#outofstock-popup',
+                    type: 'inline'
+                }
+            });
+            $('.slider-outofstock').slick({
+                slidesToShow: 4,
+                slidesToScroll: 1,
+                arrows: false,
+                autoplay: true,
+                autoplaySpeed: 2000,
+                responsive: [
+                    {
+                    breakpoint: 1024,
+                    settings: {
+                        slidesToShow: 4,
+                        infinite: true
+                        }
+                    },
+                    {
+                    breakpoint: 600,
+                    settings: {
+                        slidesToShow: 2
+                        }
+                    },
+                    {
+                    breakpoint: 480,
+                    settings: {
+                        slidesToShow: 1
+                        }
+                    }
+                ]
+            }); 
+        })
         .catch(error => console.log('error', error));
    });
+
   </script>
+
+  {%- liquid
+    assign product_handle = "playful-parrots, fiery-fox, lovely-tiger, fairy-bird, enchanting-owl, pre-order-majestic-wolf, wooden-jigsaw-puzzle-milky-whales, wooden-jigsaw-puzzle-eternal-elephant" | split: ", " 
+    -%}
+  <div id="outofstock-popup" class="outofstock popup white-popup mfp-hide">
+    <div class="popup__title">
+        <h3>Dear customer!</h3>
+        <p>There is no RS size puzzle you are interested in at the moment, but pay attention to other puzzle models of the same size:</p>
+    </div>
+    <div class="container">
+      <div class="slider-outofstock">
+            {% for handle in product_handle %}
+                <div class="slider__item">
+                    <a href="{{all_products[handle].variants[3].url}}">
+                    <img src="{{all_products[handle] | img_url: 'medium'}}" alt="">
+                    <div class="slider__item-price">
+                        <span class="title-product">{{all_products[handle].title}}</span>
+                        <span class="price">{{all_products[handle].variants[3].price | money }}</span>
+                    </div>
+                    </a>
+                </div>
+            {% endfor %}
+      </div>
+    </div>
+  </div>
